corrected logo thickness update & link on CC links & resize phone vector

--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
         <h2 class="typedText">
           Bigly makes your text bigger
         </h2>
-        <p class="bigText white">See? Big Text!</p>
+        <p class="bigText white">Bigly makes<br>your text<br>bigger</p>
       </div>
       <svg width="408px" height="823px" viewBox="0 0 408 823" version="1.1" xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -121,11 +121,14 @@
         <span>
           <p>
             🤔 <a href="https://twitter.com/guiseiz" target="_blank">@guiseiz</a>,
+            <br>
             🤓 <a href="https://twitter.com/christianklotz" target="_blank">@christianklotz</a>,
+            <br>
             & 💪 <a href="https://twitter.com/lucaslorenzo_p" target="_blank">@lucaslorenzo_p</a></p>
         </span>
     </div>
     <div class="wrapper copyright cascade">
+      <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">
       <div class="copyrightImage mobile">
         <svg width="92px" height="24px" viewBox="0 0 92 24" version="1.1" xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -191,6 +194,7 @@
           </g>
         </svg>
       </div>
+      </a>
     </div>
   </div>
   <div id="modal"><p class="bigText">See? Big Text!</p><br>
