added scroll magic when screen height can handle it

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,9 @@
   <script src="assets/components/modernizr/modernizr.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
+  <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
+
 </head>
 <body>
 
